# beleg

./: .clang-format  .gitignore  beleg.cpp  meson.build  meson_options.txt
.cache/clangd/index/: ast.cc.B8DD31EA59ED4544.idx  codegen.cc.E0F8DD4577970965.idx  diag.cc.4E06D2B29C933B8F.idx  driver.cc.46024D47B3846799.idx  hir.cc.E986D41CE3F2E473.idx  lex.cc.9F268A13AFFDBAB2.idx  main.cc.EAFB320DF2781F8A.idx  parse.cc.9637CBA2B49EFD13.idx  source_map.cc.6EB216F6B8D043D7.idx  str_interner.cc.3CE80CCEB0E84B78.idx  str_interner.hh.FF73CFB676522D43.idx  type_interner.cc.3FCF3A57E956CB86.idx  type_interner.hh.B2E44E17E4FFB06B.idx
.github/workflows/: ci.yml
examples/: meson.build  vfs_example.cc
src/: common.hh  main.cc  meson.build
src/ast/: ast.cc  ast.hh  meson.build
src/codegen/: codegen.hh  meson.build
src/diag/: diag.cc  diag.hh  meson.build  terminal_emitter.cc
src/driver/: driver.hh  meson.build
src/hir/: hir.hh  meson.build
src/intern/: intern.hh  meson.build
src/intern/str_interner/: meson.build  str_interner.cc  str_interner.hh
src/intern/type_interner/: meson.build  type_interner.cc  type_interner.hh
src/lex/: lex.cc  lex.hh  meson.build
src/parse/: meson.build  parse.cc  parse.hh
src/source_map/: meson.build  source_map.cc  source_map.hh
src/vfs/: meson.build  vfs.cc  vfs.hh
tests/: meson.build
tests/ast/: ast_demo.cc  ast_test.cc  meson.build
tests/codegen/: codegen_demo.cc  codegen_test.cc  meson.build
tests/diag/: diag_demo.cc  diag_test.cc  meson.build
tests/driver/: driver_demo.cc  driver_test.cc  meson.build
tests/hir/: hir_demo.cc  hir_test.cc  meson.build
tests/intern/: intern_demo.cc  intern_test.cc  meson.build
tests/lex/: lex_demo.cc  lex_test.cc  meson.build
tests/parse/: meson.build  parse_demo.cc  parse_test.cc
tests/source_map/: fibonacci.bl  load_file_test.cc  meson.build  source_map_demo.cc  source_map_test.cc
tests/vfs/: meson.build  vfs_test.cc
